@@ -238,3 +238,6 @@
 2015-03-16 Fred Gleason <fredg@paravelsystems.com>
 	* Modified PLL algorithm to use derivative setpoint in 'sy/syclock.cpp'
 	and 'sy/syclock.h'.
+2015-03-16 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'sy/syclock.cpp' that caused the PLL to run away
+	when processing a negative offset.
